<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_menu_overflow_description" tools:ignore="MissingTranslation">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="gif_tag">动图</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="picture_camera">获取系统相机权限被拒绝</string>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_completed">已完成</string>
    <string name="picture_done">完成</string>
    <string name="picture_done_front_num">%1$s/%2$s 完成</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_empty_title">"无视频或照片
        "
    </string>
    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_message_max_num">你最多可以选择%1$s张图片</string>
    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="picture_photograph">拍照</string>
    <string name="picture_please">请稍候...</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_preview">预览</string>
    <string name="picture_prompt">提示</string>
    <string name="picture_prompt_content">是否保存图片至手机？</string>
    <string name="picture_record_video">录视频</string>
    <string name="picture_rule">不能同时选择图片或视频</string>
    <string name="picture_save_error">图片保存失败</string>
    <string name="picture_save_success">图片保存成功至</string>
    <string name="picture_take_picture">拍摄</string>
    <string name="picture_video_toast">视频不可预览</string>
    <string name="picture_warning">暂无媒体文件！</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>
    <string name="ucrop_mutate_exception_hint">Therefore, override color resource (ucrop_color_toolbar_widget) in your
        app to make it work on pre-L devices
    </string>
    <string name="picture_message_video_max_num">你最多可以选择%1$s个视频</string>
    <string name="app_name">贵州拖车帮</string>
    <string name="dialog_negative">取消</string>
    <string name="dialog_positive">确定</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="located_failed">定位失败</string>
    <string name="locating">正在定位…</string>
    <item type="string" name="mdtp_ampm_circle_radius_multiplier">0.22</item>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <item type="string" name="mdtp_circle_radius_multiplier">0.82</item>
    <item type="string" name="mdtp_circle_radius_multiplier_24HourMode">0.85</item>
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <string name="mdtp_day_of_week_label_typeface">sans-serif</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <item type="string" name="mdtp_numbers_radius_multiplier_inner">0.6</item>
    <item type="string" name="mdtp_numbers_radius_multiplier_normal">0.81</item>
    <item type="string" name="mdtp_numbers_radius_multiplier_outer">0.83</item>
    <string name="mdtp_ok">@android:string/ok</string>
    <string name="mdtp_radial_numbers_typeface">sans-serif</string>
    <string name="mdtp_sans_serif">sans-serif</string>
    <string name="mdtp_second_picker_description">Seconds circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_seconds">Select seconds</string>
    <string name="mdtp_select_year">Select year</string>
    <item type="string" name="mdtp_selection_radius_multiplier">0.16</item>
    <item type="string" name="mdtp_text_size_multiplier_inner">0.11</item>
    <item type="string" name="mdtp_text_size_multiplier_normal">0.12</item>
    <item type="string" name="mdtp_text_size_multiplier_outer">0.08</item>
    <string name="mdtp_time_placeholder">--</string>
    <string name="mdtp_time_separator">:</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="pull_to_refresh_footer_loading">正在加载…</string>
    <string name="pull_to_refresh_footer_normal">上拉加载更多</string>
    <string name="pull_to_refresh_footer_ready">松开后加载</string>
    <string name="pull_to_refresh_header_normal">下拉刷新</string>
    <string name="pull_to_refresh_header_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_refreshing">正在刷新…</string>
    <string name="select_city">选择城市</string>
    <string name="txt_camera">拍照</string>
    <string name="txt_click_here_to_reload">点击此处重新加载</string>
    <string name="txt_money_format">%1$.2f</string>
    <string name="txt_pullcar_carinfo_account">车型</string>
    <string name="txt_pullcar_carname_account">车牌号</string>
    <string name="txt_pullcar_drive_account">驱动</string>
    <string name="txt_pullcar_from_loc_account">起点</string>
    <string name="txt_pullcar_gearbox_account">变速箱</string>
    <string name="txt_pullcar_pay_account">支付方式</string>
    <string name="txt_pullcar_phone_account">联系电话</string>
    <string name="txt_pullcar_request_account">账户类型</string>
    <string name="txt_pullcar_sort_account">类型</string>
    <string name="txt_pullcar_time_account">出发时间</string>
    <string name="txt_pullcar_to_loc_account">终点</string>
    <string name="txt_select_from_album">从手机相册选取</string>
    <string name="txt_setting_about_us">关于我们</string>
    <string name="txt_setting_clear_cache">清除缓存</string>
    <string name="txt_setting_feed_back">意见反馈</string>
    <string name="txt_setting_service_lience">服务协议</string>
    <string name="txt_take_info">拍照</string>
    <string name="txt_upload_message">图片上传</string>
    <string name="txt_user_logout">退出登录</string>
    <string name="xlistview_footer_hint_loading">正在加载…</string>
    <string name="xlistview_footer_hint_normal"/>
    <string name="xlistview_footer_hint_ready">松开后加载</string>
    <string name="xlistview_footer_newest_time">1分钟前</string>
    <string name="xlistview_header_hint_normal">下拉即可刷新</string>
    <string name="xlistview_header_hint_ready">松开后刷新</string>
    <string name="xlistview_header_hint_refreshing">正在刷新…</string>
    <string name="xlistview_header_hint_title">Wothing</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>

    <string name="apply_for_permission">权限申请</string>
    <string name="go_to_settings">去设置</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="failed_in_requiring_permission">请在「设置-应用-权限」中为拖车帮授权，以正常使用功能</string>
    <string name="file_over_size">文件大小不能超过10M</string>
</resources>
