<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:background="?colorPrimary"
                                       android:layout_width="fill_parent" android:layout_height="wrap_content"
                                       app:title="设置" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                                       app:navigationIcon="@mipmap/icon_back_white"
                                       app:titleTextColor="@color/color_ffffff"
                                       app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <RelativeLayout android:id="@+id/tcb_setting_service_rl" android:background="@color/color_ffffff"
                    android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent"
                    android:layout_height="48.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/txt_title_color"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginRight="12.0dip" android:text="@string/txt_setting_service_lience"
                  android:layout_centerVertical="true"/>
        <ImageView android:gravity="center|right" android:layout_width="wrap_content"
                   android:layout_height="wrap_content" android:src="@mipmap/icon_arrow"
                   android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/common_line_color" android:layout_width="fill_parent"
          android:layout_height="1.0dip" android:layout_marginLeft="20.0dip"/>
    <RelativeLayout android:id="@+id/tcb_clear_cache_rl" android:background="@color/color_ffffff"
                    android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent"
                    android:layout_height="48.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/txt_title_color"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginRight="12.0dip" android:text="@string/txt_setting_clear_cache"
                  android:layout_centerVertical="true"/>
        <TextView android:textSize="16.0sp" android:textColor="@color/txt_info_color" android:gravity="center|right"
                  android:id="@+id/tcb_clear_cache_txt" android:background="@null" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:minWidth="60.0dip" android:text="2.5M"
                  android:layout_toRightOf="@+id/tcb_clear_cache_txt" android:layout_alignParentRight="true"
                  android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/common_line_color" android:layout_width="fill_parent"
          android:layout_height="1.0dip"/>
    <View android:background="@color/common_line_color" android:layout_width="fill_parent"
          android:layout_height="1.0dip" android:layout_marginTop="12.0dip"/>
    <RelativeLayout android:id="@+id/tcb_feed_back_rl" android:background="@color/color_ffffff"
                    android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent"
                    android:layout_height="48.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/txt_title_color"
                  android:id="@+id/tcb_feed_back_txt" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_marginRight="12.0dip"
                  android:text="@string/txt_setting_feed_back" android:layout_centerVertical="true"/>
        <ImageView android:gravity="center|right" android:layout_width="wrap_content"
                   android:layout_height="wrap_content" android:src="@mipmap/icon_arrow"
                   android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/common_line_color" android:layout_width="fill_parent"
          android:layout_height="1.0dip" android:layout_marginLeft="20.0dip"/>
    <RelativeLayout android:id="@+id/tcb_about_us_rl" android:background="@color/color_ffffff"
                    android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent"
                    android:layout_height="48.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/txt_title_color"
                  android:id="@+id/tcb_about_us_txt" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_marginRight="12.0dip"
                  android:text="@string/txt_setting_about_us" android:layout_centerVertical="true"/>
        <ImageView android:gravity="center|right" android:layout_width="wrap_content"
                   android:layout_height="wrap_content" android:src="@mipmap/icon_arrow"
                   android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/common_line_color" android:layout_width="fill_parent"
          android:layout_height="1.0dip"/>
    <Button android:id="@+id/bt_log_out" android:layout_marginLeft="46.0dip" android:layout_marginTop="40.0dip"
            android:layout_marginRight="46.0dip" android:text="@string/txt_user_logout" style="@style/CommonRedBtn"/>
</LinearLayout>