<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical" android:background="@color/activity_bg_color"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:background="?colorPrimary"
                                       android:layout_width="fill_parent" android:layout_height="wrap_content"
                                       app:title="拖车请求详情" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                                       app:navigationIcon="@mipmap/icon_back_white"
                                       app:titleTextColor="@color/color_ffffff"
                                       app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView android:textSize="16.0sp" android:textColor="@color/color_ffffff" android:layout_gravity="right"
                  android:id="@+id/tcb_operation_txt" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="确认"/>
    </android.support.v7.widget.Toolbar>
    <com.tuochebang.user.view.component.MapComponent android:id="@+id/mScrollView" android:layout_width="fill_parent"
                                                     android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <RelativeLayout android:id="@+id/rl_driver_info" android:background="@color/color_ffffff"
                            android:layout_width="fill_parent" android:layout_height="48.0dip">
                <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/img_user" android:layout_width="40.0dip"
                                                              android:layout_height="40.0dip"
                                                              android:layout_marginLeft="12.0dip"
                                                              android:layout_centerVertical="true"/>
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
                              android:layout_height="wrap_content" android:layout_marginLeft="12.0dip"
                              android:layout_toRightOf="@+id/img_user" android:layout_centerVertical="true">
                    <TextView android:textColor="@color/txt_title_color" android:id="@+id/txt_driver_name"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                    <TextView android:textColor="@color/txt_info_color" android:id="@+id/txt_user_phone"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:layout_marginTop="5.0dip"/>
                </LinearLayout>
                <ImageView android:id="@+id/img_call" android:layout_width="wrap_content"
                           android:layout_height="wrap_content" android:layout_marginRight="12.0dip"
                           android:src="@mipmap/icon_call" android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"/>
            </RelativeLayout>
            <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                  android:layout_height="1.0dip" android:layout_marginLeft="20.0dip"/>
            <LinearLayout android:orientation="vertical" android:background="@color/color_ffffff"
                          android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@+id/tcb_request_time_rl" android:paddingLeft="12.0dip"
                                android:paddingRight="12.0dip" android:layout_width="fill_parent"
                                android:layout_height="48.0dip">
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_title_color"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:layout_marginRight="12.0dip" android:text="@string/txt_pullcar_time_account"
                              android:layout_centerVertical="true"/>
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_info_color"
                              android:gravity="center|right" android:id="@+id/tcb_request_time_txt"
                              android:background="@null" android:layout_width="fill_parent"
                              android:layout_height="wrap_content" android:minWidth="60.0dip"
                              android:layout_toRightOf="@id/tcb_request_time_txt" android:layout_alignParentRight="true"
                              android:layout_centerVertical="true"/>
                </RelativeLayout>
                <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                      android:layout_height="1.0dip" android:layout_marginLeft="20.0dip"/>
                <RelativeLayout android:id="@+id/tcb_request_order_rl" android:paddingLeft="12.0dip"
                                android:paddingRight="12.0dip" android:visibility="gone"
                                android:layout_width="fill_parent" android:layout_height="48.0dip">
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_title_color"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:layout_marginRight="12.0dip" android:text="订单号"
                              android:layout_centerVertical="true"/>
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_info_color"
                              android:gravity="center|right" android:id="@+id/tcb_request_order_txt"
                              android:background="@null" android:layout_width="fill_parent"
                              android:layout_height="wrap_content" android:minWidth="60.0dip"
                              android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
                </RelativeLayout>
                <RelativeLayout android:id="@+id/tcb_request_order_status_rl" android:paddingLeft="12.0dip"
                                android:paddingRight="12.0dip" android:layout_width="fill_parent"
                                android:layout_height="48.0dip">
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_title_color"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:layout_marginRight="12.0dip" android:text="订单状态"
                              android:layout_centerVertical="true"/>
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_info_color"
                              android:gravity="center|right" android:id="@+id/tcb_request_order_status_txt"
                              android:background="@null" android:layout_width="fill_parent"
                              android:layout_height="wrap_content" android:minWidth="60.0dip"
                              android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
                </RelativeLayout>
                <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                      android:layout_height="1.0dip"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@color/color_ffffff"
                          android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:layout_marginTop="12.0dip">
                <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                      android:layout_height="1.0dip"/>
                <RelativeLayout android:id="@+id/tcb_request_from_loc_rl" android:paddingLeft="12.0dip"
                                android:paddingRight="12.0dip" android:layout_width="fill_parent"
                                android:layout_height="48.0dip">
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_title_color"
                              android:id="@+id/txt_request_begin" android:layout_width="wrap_content"
                              android:layout_height="wrap_content" android:layout_marginRight="12.0dip"
                              android:text="@string/txt_pullcar_from_loc_account" android:layout_centerVertical="true"/>
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_info_color"
                              android:gravity="center|right" android:id="@+id/tcb_request_from_loc_txt"
                              android:background="@null" android:layout_width="wrap_content"
                              android:layout_height="wrap_content" android:maxWidth="100.0dip" android:text=""
                              android:maxEms="15" android:singleLine="true" android:drawablePadding="5.0dip"
                              android:layout_toRightOf="@+id/txt_request_begin" android:layout_alignParentRight="true"
                              android:layout_centerVertical="true"/>
                </RelativeLayout>
                <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                      android:layout_height="1.0dip" android:layout_marginLeft="20.0dip"/>
                <RelativeLayout android:id="@+id/tcb_request_to_loc_rl" android:paddingLeft="12.0dip"
                                android:paddingRight="12.0dip" android:layout_width="fill_parent"
                                android:layout_height="48.0dip">
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_title_color"
                              android:id="@+id/txt_request_end" android:layout_width="wrap_content"
                              android:layout_height="wrap_content" android:layout_marginRight="12.0dip"
                              android:text="@string/txt_pullcar_to_loc_account" android:layout_centerVertical="true"/>
                    <TextView android:textSize="16.0sp" android:textColor="@color/txt_info_color"
                              android:gravity="center|right" android:id="@+id/tcb_request_to_loc_txt"
                              android:background="@null" android:layout_width="wrap_content"
                              android:layout_height="wrap_content" android:maxWidth="100.0dip" android:text=""
                              android:maxEms="15" android:singleLine="true" android:drawablePadding="5.0dip"
                              android:layout_toRightOf="@+id/txt_request_end" android:layout_alignParentRight="true"
                              android:layout_centerVertical="true"/>
                </RelativeLayout>
                <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                      android:layout_height="1.0dip"/>
            </LinearLayout>
            <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                  android:layout_height="1.0dip" android:layout_marginTop="12.0dip"/>
            <RelativeLayout android:background="@color/color_ffffff" android:paddingLeft="12.0dip"
                            android:paddingRight="12.0dip" android:layout_width="fill_parent"
                            android:layout_height="48.0dip">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content"
                              android:layout_height="wrap_content" android:layout_centerInParent="true">
                    <TextView android:textSize="18.0sp" android:textColor="@color/txt_title_color"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:layout_marginRight="12.0dip" android:text="预估价格"/>
                    <TextView android:textSize="18.0sp" android:textColor="@color/txt_common_red_color"
                              android:id="@+id/tcb_request_price_txt" android:background="@null"
                              android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:minWidth="60.0dip" android:text="240"/>
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/common_line_color" android:layout_width="fill_parent"
                  android:layout_height="1.0dip"/>
            <com.amap.api.maps2d.MapView android:id="@+id/mapview" android:layout_width="fill_parent"
                                         android:layout_height="180.0dip" android:layout_marginBottom="10.0dip"/>
            <TextView android:textSize="@dimen/txt_size_16sp" android:textColor="@color/txt_info_color"
                      android:id="@+id/txt_car_info" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:layout_marginLeft="12.0dip"
                      android:layout_marginTop="5.0dip" android:text="奥迪 A6 黑色 自动挡 四驱"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:layout_marginLeft="12.0dip"
                          android:layout_marginTop="5.0dip">
                <TextView android:textSize="@dimen/txt_size_16sp" android:textColor="@color/txt_info_color"
                          android:id="@+id/txt_car_type" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:text="事故车"/>
                <TextView android:textSize="@dimen/txt_size_16sp" android:textColor="@color/txt_info_color"
                          android:id="@+id/txt_car_other" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"/>
            </LinearLayout>
            <TextView android:textSize="@dimen/txt_size_16sp" android:textColor="@color/txt_info_color"
                      android:id="@+id/txt_is_return" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:layout_marginLeft="12.0dip"
                      android:layout_marginTop="5.0dip" android:text="需要返程车"/>
            <com.framework.app.component.optimize.GridViewForScrollView android:id="@+id/noScrollgridview"
                                                                android:visibility="visible" android:scrollbars="none"
                                                                android:layout_width="fill_parent"
                                                                android:layout_height="wrap_content"
                                                                android:layout_marginLeft="12.0dip"
                                                                android:layout_marginTop="20.0dip"
                                                                android:layout_marginRight="12.0dip"
                                                                android:layout_marginBottom="20.0dip"
                                                                android:horizontalSpacing="3.0dip"
                                                                android:numColumns="4"/>
            <Button android:gravity="center" android:id="@+id/cancel_order" android:visibility="gone"
                    android:layout_width="fill_parent" android:layout_height="48.0dip"
                    android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip"
                    android:layout_marginRight="30.0dip" android:layout_marginBottom="30.0dip" android:text="取消订单"
                    style="@style/LoginRedBtn"/>
        </LinearLayout>
    </com.tuochebang.user.view.component.MapComponent>
</LinearLayout>